--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <a href="#how-it-works" class="hover:text-blue-500 transition">Как это работает</a>
                     <a href="#pricing" class="hover:text-blue-500 transition">Тарифы</a>
                 </nav>
-                <a href="https://t.me/VoiceNoteAI_bot" target="_blank" class="hidden md:block bg-blue-500 text-white font-bold py-2 px-5 rounded-full hover:bg-blue-600 transition shadow-md hover:shadow-lg">
+                <a href="https://t.me/tgnote_by_bot" target="_blank" class="hidden md:block bg-blue-500 text-white font-bold py-2 px-5 rounded-full hover:bg-blue-600 transition shadow-md hover:shadow-lg">
                     Запустить в Telegram
                 </a>
                 <button id="mobile-menu-button" class="md:hidden text-slate-700">
@@ -110,7 +110,7 @@
                 <a href="#features" class="block py-2 text-slate-600 hover:text-blue-500 font-medium">Возможности</a>
                 <a href="#how-it-works" class="block py-2 text-slate-600 hover:text-blue-500 font-medium">Как это работает</a>
                 <a href="#pricing" class="block py-2 text-slate-600 hover:text-blue-500 font-medium">Тарифы</a>
-                <a href="https://t.me/VoiceNoteAI_bot" target="_blank" class="block mt-4 w-full bg-blue-500 text-white font-bold py-3 rounded-lg text-center hover:bg-blue-600 transition">
+                <a href="https://t.me/tgnote_by_bot" target="_blank" class="block mt-4 w-full bg-blue-500 text-white font-bold py-3 rounded-lg text-center hover:bg-blue-600 transition">
                     Попробовать бесплатно
                 </a>
             </div>
@@ -125,7 +125,7 @@
                         <h1 class="text-4xl md:text-5xl lg:text-6xl font-extrabold leading-tight mb-4">Преврати голос в порядок. Мгновенно.</h1>
                         <p class="text-xl md:text-2xl text-blue-100 mb-8">Надиктовывайте идеи, ставьте задачи и планируйте встречи. VoiceNote AI сам всё расшифрует, структурирует и поставит напоминание.</p>
                         <div class="flex flex-col sm:flex-row gap-4 justify-center md:justify-start">
-                            <a href="https://t.me/VoiceNoteAI_bot" target="_blank" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-4 px-8 rounded-full text-center transition duration-300 transform hover:scale-105 shadow-lg">
+                            <a href="https://t.me/tgnote_by_bot" target="_blank" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-4 px-8 rounded-full text-center transition duration-300 transform hover:scale-105 shadow-lg">
                                 Попробовать бесплатно
                             </a>
                         </div>
@@ -299,7 +299,7 @@
                                 <li class="flex items-center"><i class="fas fa-check text-green-500 mr-3"></i><span>5 записей дней рождения</span></li>
                                 <li class="flex items-center"><i class="fas fa-check text-green-500 mr-3"></i><span>Базовые напоминания</span></li>
                             </ul>
-                            <a href="https://t.me/VoiceNoteAI_bot" target="_blank" class="block w-full bg-slate-100 hover:bg-slate-200 text-slate-800 font-bold py-4 rounded-lg text-center transition">Начать бесплатно</a>
+                            <a href="https://t.me/tgnote_by_bot" target="_blank" class="block w-full bg-slate-100 hover:bg-slate-200 text-slate-800 font-bold py-4 rounded-lg text-center transition">Начать бесплатно</a>
                         </div>
                     </div>
                     <div class="w-full md:w-1/2 lg:w-2/5 px-4 mb-8 reveal" style="transition-delay: 200ms;">
@@ -315,7 +315,7 @@
                                 <li class="flex items-center"><i class="fas fa-star text-yellow-300 mr-3"></i>Импорт дней рождения</li>
                                 <li class="flex items-center"><i class="fas fa-star text-yellow-300 mr-3"></i>Экспорт всех данных</li>
                             </ul>
-                            <a href="https://t.me/VoiceNoteAI_bot" target="_blank" class="block w-full bg-white text-blue-600 font-bold py-4 rounded-lg text-center hover:bg-slate-100 transition">Получить VIP</a>
+                            <a href="https://t.me/tgnote_by_bot" target="_blank" class="block w-full bg-white text-blue-600 font-bold py-4 rounded-lg text-center hover:bg-slate-100 transition">Получить VIP</a>
                         </div>
                     </div>
                 </div>
@@ -346,7 +346,7 @@
             <div class="container mx-auto px-6 max-w-3xl mx-auto text-center">
                 <h2 class="text-3xl md:text-4xl font-bold mb-6">Готовы навести порядок в мыслях?</h2>
                 <p class="text-lg text-slate-300 mb-8">Начните пользоваться VoiceNote AI прямо сейчас. Это бесплатно и займет меньше минуты.</p>
-                <a href="https://t.me/VoiceNoteAI_bot" target="_blank" class="inline-block bg-orange-500 hover:bg-orange-600 text-white font-bold py-4 px-12 rounded-full text-lg transition transform hover:scale-105 shadow-lg">
+                <a href="https://t.me/tgnote_by_bot" target="_blank" class="inline-block bg-orange-500 hover:bg-orange-600 text-white font-bold py-4 px-12 rounded-full text-lg transition transform hover:scale-105 shadow-lg">
                     <i class="fab fa-telegram-plane mr-2"></i> Запустить в Telegram
                 </a>
             </div>
@@ -370,8 +370,8 @@
                 <div>
                     <h4 class="font-bold text-white mb-4">Комьюнити</h4>
                     <ul class="space-y-2 text-sm">
-                        <li><a href="https://t.me/your_news_channel" target="_blank" class="hover:text-white transition">Новости</a></li>
-                        <li><a href="https://t.me/your_chat" target="_blank" class="hover:text-white transition">Чат</a></li>
+                        <li><a href="https://t.me/voicenote_news" target="_blank" class="hover:text-white transition">Новости</a></li>
+                        <li><a href="https://t.me/+CCrwt5YDWyM2NTMy" target="_blank" class="hover:text-white transition">Чат</a></li>
                     </ul>
                 </div>
                 <div>
