--- a/index.html
+++ b/index.html
@@ -327,15 +327,15 @@
                 <h2 class="text-3xl font-bold text-center mb-16 text-slate-900">Нам доверяют свою продуктивность</h2>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                     <div class="bg-slate-50 p-6 rounded-xl border reveal">
-                        <div class="flex items-center mb-4"><img src="https://i.pravatar.cc/150?u=a" alt="Аватар Анны" class="w-12 h-12 rounded-full mr-4"><div><h4 class="font-bold">Анна К.</h4><p class="text-sm text-gray-500">Маркетолог</p></div></div>
+                        <div class="flex items-center mb-4"><img src="https://i.pravatar.cc/150?u=a" alt="Аватар Александра" class="w-12 h-12 rounded-full mr-4"><div><h4 class="font-bold">Александр Т.</h4><p class="text-sm text-gray-500">Разработчик</p></div></div>
                         <p class="text-gray-700">"Это просто спасение! Все мои идеи теперь в одном месте, а не в сотне чатов. Функция напоминаний — огонь!"</p>
                     </div>
                     <div class="bg-slate-50 p-6 rounded-xl border reveal" style="transition-delay: 200ms;">
-                        <div class="flex items-center mb-4"><img src="https://i.pravatar.cc/150?u=b" alt="Аватар Михаила" class="w-12 h-12 rounded-full mr-4"><div><h4 class="font-bold">Михаил П.</h4><p class="text-sm text-gray-500">Предприниматель</p></div></div>
+                        <div class="flex items-center mb-4"><img src="https://i.pravatar.cc/150?u=b" alt="Аватар Михаила" class="w-12 h-12 rounded-full mr-4"><div><h4 class="font-bold">Тимур Г.</h4><p class="text-sm text-gray-500">Предприниматель</p></div></div>
                         <p class="text-gray-700">"Использую для фиксации итогов встреч. Надиктовал, и через минуту у меня готовая заметка. Экономит кучу времени."</p>
                     </div>
                     <div class="bg-slate-50 p-6 rounded-xl border reveal" style="transition-delay: 400ms;">
-                        <div class="flex items-center mb-4"><img src="https://i.pravatar.cc/150?u=c" alt="Аватар Алексея" class="w-12 h-12 rounded-full mr-4"><div><h4 class="font-bold">Алексей С.</h4><p class="text-sm text-gray-500">Студент</p></div></div>
+                        <div class="flex items-center mb-4"><img src="https://i.pravatar.cc/150?u=n" alt="Аватар Дианы" class="w-12 h-12 rounded-full mr-4"><div><h4 class="font-bold">Диана Г.</h4><p class="text-sm text-gray-500">Домохозяйка</p></div></div>
                         <p class="text-gray-700">"Наконец-то я не забываю поздравлять друзей. Мама довольна :)"</p>
                     </div>
                 </div>
