--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <!-- Open Graph для красивых ссылок в соцсетях -->
     <meta property="og:title" content="VoiceNote AI — Преврати голос в порядок">
     <meta property="og:description" content="Просто надиктуйте идею, задачу или дату. VoiceNote AI сам всё расшифрует, структурирует и поставит напоминание.">
-    <meta property="og:image" content="https://voicenote-ai.ru/og-image.png"> <!-- ЗАМЕНИТЕ НА ССЫЛКУ НА ВАШУ КАРТИНКУ (1200x630px) -->
-    <meta property="og:url" content="https://voicenote-ai.ru"> <!-- ЗАМЕНИТЕ НА ВАШ ДОМЕН -->
+    <meta property="og:image" content="https://voicenote-ai.ru/og-image.png">
+    <meta property="og:url" content="https://voicenote.ru">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="ru_RU">
     <meta property="og:site_name" content="VoiceNote AI">
@@ -22,11 +22,11 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="VoiceNote AI — Преврати голос в порядок">
     <meta name="twitter:description" content="Просто надиктуйте идею, задачу или дату. VoiceNote AI сам всё расшифрует, структурирует и поставит напоминание.">
-    <meta name="twitter:image" content="https://voicenote-ai.ru/og-image.png"> <!-- ЗАМЕНИТЕ НА ССЫЛКУ НА ВАШУ КАРТИНКУ -->
+    <meta name="twitter:image" content="https://voicenote-ai.ru/og-image.png"> >
 
     <!-- Favicon -->
-    <link rel="icon" href="/favicon.ico" type="image/x-icon"> <!-- ПОМЕСТИТЕ favicon.ico В КОРЕНЬ САЙТА -->
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png"> <!-- Иконка для Apple-устройств -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
