--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                             <p class="opacity-80 mt-2 mb-6">Снимите все лимиты и откройте полный потенциал AI-ассистента.</p>
                             <div class="text-4xl font-extrabold my-4">По заявке</div>
                             <ul class="space-y-4 mb-8">
-                                <li class="flex items-center"><i class="fas fa-star text-yellow-300 mr-3"></i><b>Безлимитно</b> всего</li>
+                                <li class="flex items-center"><i class="fas fa-star text-yellow-300 mr-3"></i>Никаких лимитов</li>
                                 <li class="flex items-center"><i class="fas fa-star text-yellow-300 mr-3"></i>Умные и предварительные напоминания</li>
                                 <li class="flex items-center"><i class="fas fa-star text-yellow-300 mr-3"></i>Отложенные напоминания (Snooze)</li>
                                 <li class="flex items-center"><i class="fas fa-star text-yellow-300 mr-3"></i>Импорт дней рождения</li>
