--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta property="og:type" content="website">
     <meta property="og:locale" content="ru_RU">
     <meta property="og:site_name" content="VoiceNote AI">
+    <meta name="yandex-verification" content="3fe0e82967b8a016" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
