--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- SEO-теги -->
+
     <title>VoiceNote AI — Ваш умный ассистент для голосовых заметок в Telegram</title>
     <meta name="description" content="Превратите ваши голосовые сообщения в структурированные заметки, задачи и напоминания с помощью ИИ. VoiceNote AI распознает речь, поймет суть и напомнит о важном. Попробуйте бесплатно!">
     <meta name="keywords" content="голосовые заметки, telegram бот, искусственный интеллект, распознавание речи, планировщик, задачи, напоминания, продуктивность, VoiceNote AI, ai ассистент">
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();
+   for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+   k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
+   ym(102611972, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+   });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/102611972" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
     <!-- Open Graph для красивых ссылок в соцсетях -->
     <meta property="og:title" content="VoiceNote AI — Преврати голос в порядок">
     <meta property="og:description" content="Просто надиктуйте идею, задачу или дату. VoiceNote AI сам всё расшифрует, структурирует и поставит напоминание.">
