--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Open Graph для красивых ссылок в соцсетях -->
     <meta property="og:title" content="VoiceNote AI — Преврати голос в порядок">
     <meta property="og:description" content="Просто надиктуйте идею, задачу или дату. VoiceNote AI сам всё расшифрует, структурирует и поставит напоминание.">
-    <!-- ЗАМЕНИТЕ НА ССЫЛКУ НА ВАШУ КАРТИНКУ ДЛЯ ПРЕВЬЮ -->
+
     <meta property="og:image" content="https://voicenote-ai.ru/og-image.png">
     <meta property="og:url" content="https://voicenote-ai.ru">
     <meta property="og:type" content="website">
@@ -43,7 +43,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="VoiceNote AI — Преврати голос в порядок">
     <meta name="twitter:description" content="Просто надиктуйте идею, задачу или дату. VoiceNote AI сам всё расшифрует, структурирует и поставит напоминание.">
-    <!-- ЗАМЕНИТЕ НА ССЫЛКУ НА ВАШУ КАРТИНКУ ДЛЯ ПРЕВЬЮ -->
+
     <meta name="twitter:image" content="https://voicenote-ai.ru/og-image.png">
 
     <!-- Favicon -->
@@ -166,36 +166,42 @@
             </div>
         </section>
 
-        <section id="how-it-works" class="py-20 bg-slate-100">
-            <div class="container mx-auto px-6">
-                <div class="text-center max-w-3xl mx-auto mb-16">
-                    <h2 class="text-3xl md:text-4xl font-bold text-slate-900 mb-4">От хаоса к порядку за 3 шага</h2>
-                    <p class="text-gray-600 text-lg">Забудьте про стикеры и блокноты. Ваши идеи и задачи теперь под контролем.</p>
+<section id="how-it-works" class="py-20 bg-slate-100">
+    <div class="container mx-auto px-6">
+        <div class="text-center max-w-3xl mx-auto mb-16">
+            <h2 class="text-3xl md:text-4xl font-bold text-slate-900 mb-4">От хаоса к порядку за 3 шага</h2>
+            <p class="text-gray-600 text-lg">Забудьте про стикеры и блокноты. Ваши идеи и задачи теперь под контролем.</p>
+        </div>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+            <!-- Блок 1 (без изменений) -->
+            <div class="bg-white rounded-2xl p-8 shadow-lg feature-card text-center reveal">
+                <div class="bg-blue-100 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-6 feature-icon">
+                    <i class="fas fa-paper-plane text-blue-600 text-2xl"></i>
                 </div>
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                    <div class="bg-white rounded-2xl p-8 shadow-lg feature-card text-center reveal">
-                        <div class="bg-blue-100 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-6 feature-icon">
-                            <i class="fas fa-paper-plane text-blue-600 text-2xl"></i>
-                        </div>
-                        <h3 class="text-xl font-bold mb-3">1. Отправляйте что угодно</h3>
-                        <p class="text-gray-600">Надиктуйте голосовое сообщение или просто перешлите боту текст из любого чата — он поймет и то, и другое.</p>
-                    </div>
-                    <div class="bg-purple-100 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-6 feature-icon">
-                            <i class="fas fa-wand-magic-sparkles text-purple-600 text-2xl"></i>
-                        </div>
-                        <h3 class="text-xl font-bold mb-3">2. Наблюдайте магию</h3>
-                        <p class="text-gray-600">Наш ИИ мгновенно распознает речь, выделит задачи, даты, имена и создаст четкую, структурированную заметку.</p>
-                    </div>
-                    <div class="bg-white rounded-2xl p-8 shadow-lg feature-card text-center reveal" style="transition-delay: 400ms;">
-                        <div class="bg-green-100 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-6 feature-icon">
-                            <i class="fas fa-check-double text-green-600 text-2xl"></i>
-                        </div>
-                        <h3 class="text-xl font-bold mb-3">3. Действуйте</h3>
-                        <p class="text-gray-600">Получайте умные напоминания, просматривайте дела и будьте уверены — ни одна ваша идея не будет потеряна.</p>
-                    </div>
-                </div>
+                <h3 class="text-xl font-bold mb-3">1. Отправляйте что угодно</h3>
+                <p class="text-gray-600">Надиктуйте голосовое сообщение или просто перешлите боту текст из любого чата — он поймет и то, и другое.</p>
             </div>
-        </section>
+
+            <!-- ИСПРАВЛЕННЫЙ Блок 2 -->
+            <div class="bg-white rounded-2xl p-8 shadow-lg feature-card text-center reveal" style="transition-delay: 200ms;">
+                <div class="bg-purple-100 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-6 feature-icon">
+                    <i class="fas fa-wand-magic-sparkles text-purple-600 text-2xl"></i>
+                </div>
+                <h3 class="text-xl font-bold mb-3">2. Наблюдайте магию</h3>
+                <p class="text-gray-600">Наш ИИ мгновенно распознает речь, выделит задачи, даты, имена и создаст четкую, структурированную заметку.</p>
+            </div>
+
+            <!-- Блок 3 (без изменений) -->
+            <div class="bg-white rounded-2xl p-8 shadow-lg feature-card text-center reveal" style="transition-delay: 400ms;">
+                <div class="bg-green-100 rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-6 feature-icon">
+                    <i class="fas fa-check-double text-green-600 text-2xl"></i>
+                </div>
+                <h3 class="text-xl font-bold mb-3">3. Действуйте</h3>
+                <p class="text-gray-600">Получайте умные напоминания, просматривайте дела и будьте уверены — ни одна ваша идея не будет потеряна.</p>
+            </div>
+        </div>
+    </div>
+</section>
 
         <section id="features" class="py-20 bg-white">
             <div class="container mx-auto px-6">
